--- a/Default.cshtml
+++ b/Default.cshtml
@@ -6,7 +6,7 @@
     var featured = products[new Random().Next(products.Count)];
 }
 
-<h1>Welcome to Fourth Coffee!</h1>
+<h1>Welcome to satya aaradhy lishitha!</h1>
 
 <div id="featuredProduct">
     <img alt="Featured Product" src="~/Images/Products/@featured.ImageName"/>
@@ -19,6 +19,7 @@
         <div id="callToAction">
             <a class="order-button" href="~/order/@featured.Id" title="Order @featured.Name">Order Now</a>
         </div>
+<iframe src="https://giphy.com/embed/LliWQ44FoWzZu" width="480" height="182" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/aishwarya-rai-bachchan-LliWQ44FoWzZu">via GIPHY</a></p>
     </div>
 </div>
 
